@@ -361,7 +361,7 @@ public class TomlParser implements Closeable {
         } else if (value instanceof List) {
             List<Map<String, Object>> list = (List<Map<String, Object>>) value;
             if (!list.isEmpty()) {
-                TomlParser nextLevel = new TomlParser(list.getFirst());
+                TomlParser nextLevel = new TomlParser(list.get(0));
                 return nextLevel.navigateToPath(pathSegments, startIndex + 1);
             }
         }
@@ -381,7 +381,7 @@ public class TomlParser implements Closeable {
             if (value instanceof Map) {
                 return true;
             } else if (value instanceof List<?> list) {
-                return !list.isEmpty() && list.getFirst() instanceof Map;
+                return !list.isEmpty() && list.get(0) instanceof Map;
             }
             return false;
         }
@@ -413,7 +413,7 @@ public class TomlParser implements Closeable {
             } else if (value instanceof List) {
                 List<Map<String, Object>> list = (List<Map<String, Object>>) value;
                 if (!list.isEmpty()) {
-                    return new TomlParser(list.getFirst());
+                    return new TomlParser(list.get(0));
                 }
             }
             return null;
@@ -785,7 +785,7 @@ public class TomlParser implements Closeable {
         Object section = parsedData.get(sectionName);
         if (section instanceof List) {
             List<Map<String, Object>> sectionList = (List<Map<String, Object>>) section;
-            return sectionList.isEmpty() ? null : sectionList.getFirst();
+            return sectionList.isEmpty() ? null : sectionList.get(0);
         } else if (section instanceof Map) {
             return (Map<String, Object>) section;
         }
